# gui_demonstrator

./: README.md  package.xml  setup.cfg  setup.py
gui/: package.xml
gui/gui/: node.py  plotly_tree.py  video.py
gui/launch/: main_launch.py
gui_demonstrator/: file_picker.py  node.py  plotly_tree.py  tbrace_gui.py
