<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_demonstrator</name>
  <version>1.0.0</version>
  <description>This is the gui for 326 Demonstrator.</description>
  <maintainer email="anna-maria.meer@ipa.fraunhofer.de">Anna-Maria Meer</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
